--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,5 @@
+removed_sources:
+  cyrus-imapd-2.4.13.tar.gz: df06d6d4b2b24d631cbbf1aa6f77a94381ce6bb7
 sources:
-  "cyrus-imapd-2.4.13.tar.gz": df06d6d4b2b24d631cbbf1aa6f77a94381ce6bb7
+  cyrus-imapd-2.4.17.tar.gz: cc869dea08ad663fc32d9ab628992a1711cfbb1b
+  cyrus-imapd-2.4.17.tar.gz.sig: 4b59624bc25e26610a81b76c25b9d3eeb2f1a8ed
